@@ -1,3 +1,8 @@
+2005-06-29  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* map.c: Handle Syslog-related changes (SyslogFacility isn't a 
+	  [Flags] enum); make-map.exe changes.
+
 2005-06-28  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* map.c, map.h: Handle Syslog-related changes (SyslogLevel isn't a [Flags]
